# oreilly-ds-bootcamp

./: .gitignore  .jupyterlite.doit.db  Makefile  main.py  pyproject.toml
.github/workflows/: deploy.yml
labs/lab01/: 2025-04-07-LIVE-lab01.ipynb  lab01.ipynb
labs/lab02/: lab02.ipynb
labs/lab03/: lab03.ipynb
labs/lab04/: lab04.ipynb
src/lab01/: bootcamp_utils.py  lab01.ipynb
src/lab02/: bootcamp_utils.py  lab02.ipynb
src/lab04/: lab04.ipynb
src/lab04/data/: aqs_06-067-0010.csv
