[project]
name = "oreilly-bootcamp"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "jupyterlite-core>=0.5.1",
    "jupyterlite-pyodide-kernel>=0.5.2",
    "matplotlib>=3.10.1",
    "numpy>=2.2.4",
    "otter-grader<=3.3.0",
    "pandas>=2.2.3",
    "plotly>=6.0.1",
    "scikit-learn>=1.6.1",
    "seaborn>=0.13.2",
]
