[project]
name = "oreilly-bootcamp"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "click>=8.1.8",
    "ipython<8",
    "ipywidgets>=8.1.5",
    "jupyter-server>=2.15.0",
    "jupyterlab>=4.4.0",
    "jupyterlab-server>=2.27.3",
    "jupyterlite-core>=0.5.1",
    "jupyterlite-pyodide-kernel>=0.5.2",
    "matplotlib>=3.10.1",
    "numpy>=2.2.4",
    "otter-grader<=3.3.0",
    "pandas>=2.2.3",
    "plotly>=6.0.1",
    "scikit-learn>=1.6.1",
    "seaborn>=0.13.2",
]
